[package]
name = "ask_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
term_size = "0.3"
whoami = "1.2"
base64 = "0.21"
atty = "0.2"
dialoguer = "0.10"
