[package]
name = "ask_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3.31" # Keep this, it's used for StreamExt
reqwest = { version = "0.11", features = ["blocking", "json", "stream"] } # Added "stream" feature
term_size = "0.3"
whoami = "1.2" # Note: previous code used 1.4, this might be a slight downgrade if specific 1.4 features were relied on, but likely fine.
base64 = "0.21"
dialoguer = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] } # Added tokio for async runtime
bytes = "1" # Added bytes, as reqwest::Bytes (from stream) comes from this
regex = "1.11.1"
