[package]
name = "ask_rs"
version = "0.5.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.9", features = ["json"] }
# Study removing these
scraper = "0.18"      # For parsing HTML (Search Tool)
html2text = "0.11"    # For converting page HTML to readable text (Reader Tool)
base64 = "0.21"
shellexpand = "3.1"
urlencoding = "2.1"
